Food menu content complete

--- a/index.html
+++ b/index.html
@@ -5,9 +5,362 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Replay Menu</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<!-- PAGE 1 -->
+	<section class="breakfast-background">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 dark-background">
+					<h2 class="bold-serif-text brown-text">Breakfast</h2>
+					<table>
+						<tr>
+							<td>
+								English Breakfast
+								<p class="light-text small-text">
+									2 fried eggs, 2 beef / chicken sausages, & 2 slices of bacon
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1100/=</td>
+						</tr>
+						<tr>
+							<td>
+								Replay Sunrise Breakfast
+								<p class="light-text small-text">
+									Grilled chicken breast, 2 fried eggs (sunny side-up) & assorted vegetables
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1200/=</td>
+						</tr>
+						<tr>
+							<td>
+								Steak & Eggs
+								<p class="light-text small-text">
+									Perfectly grilled beef steak served with fried eggs, potato slices & assorted vegetables
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1300/=</td>
+						</tr>
+						<tr>
+							<td>
+								Replay Sandwich
+								<p class="light-text small-text">
+									White or wholemeal bread egg and cheese sandwich with bacon or sausage served with your choice of chips
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">990/=</td>
+						</tr>
+						<tr>
+							<td>
+								Replay Rolex
+								<p class="light-text small-text">
+									Spanish omelette rolled with chapati & 2 sausages
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">800/=</td>
+						</tr>
+					</table>
+
+					<h2 class="bold-serif-text brown-text">Pizza</h2>
+					<table>
+						<tr>
+							<td>
+								Margherita
+								<p class="light-text small-text">
+									Replay sauce, fresh basil, tomatoes & mozzarella cheese
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1200/=</td>
+						</tr>
+						<tr>
+							<td>
+								Meat Lovers
+								<p class="light-text small-text">
+									Replay sauce, choma sausages, chicken strips & mozzarella cheese
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+						<tr>
+							<td>
+								Tandoori Chicken Pizza
+								<p class="light-text small-text">
+									Marrianated chicken strips, pepper, mozzarella cheese
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+						<tr>
+							<td>
+								Grilled Veggie Pizza
+								<p class="light-text small-text">
+									Grilled pepper,zucchinni, toppings, mozzarella cheese & replay sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1200/=</td>
+						</tr>
+						<tr>
+							<td>
+								Hawaiian Pizza
+								<p class="light-text small-text">
+									Pizza sauce, bacon, pineapple, olives & mozzarella cheese
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- PAGE 2 -->
+	<section class="main-dish-background">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 dark-background">
+					<h2 class="bold-serif-text brown-text">Burgers</h2>
+					<table>
+						<tr>
+							<td>
+								Replay Beef Burger
+							</td>
+							<td class="brown-text bold-serif-text">1300/=</td>
+						</tr>
+						<tr>
+							<td>
+								Chicken Burger
+							</td>
+							<td class="brown-text bold-serif-text">1400/=</td>
+						</tr>
+						<tr>
+							<td>
+								Meaty Burger
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+					</table>
+
+					<h2 class="bold-serif-text brown-text">Appetizers</h2>
+					<table>
+						<tr>
+							<td>
+								Mushroom Soup
+							</td>
+							<td class="brown-text bold-serif-text">600/=</td>
+						</tr>
+						<tr>
+							<td>
+								Tomato Soup
+							</td>
+							<td class="brown-text bold-serif-text">600/=</td>
+						</tr>
+						<tr>
+							<td>
+								Carrot Cream & Ginger soup
+							</td>
+							<td class="brown-text bold-serif-text">650/=</td>
+						</tr>
+						<tr>
+							<td>
+								Clear Beef Broth
+							</td>
+							<td class="brown-text bold-serif-text">700/=</td>
+						</tr>
+					</table>
+
+					<h2 class="bold-serif-text brown-text">Main Dishes, Grills</h2>
+					<table>
+						<tr>
+							<td>
+								Replay Sirloin Steak
+								<p class="light-text small-text">
+									Marinated with mixed herbs & grilled to your liking served with Replay brown sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">2100/=</td>
+						</tr>
+						<tr>
+							<td>
+								Rib Eye
+								<p class="light-text small-text">
+									Marinated with herbs and grilled to your liking served with chefs special pepper sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">2200/=</td>
+						</tr>
+						<tr>
+							<td>
+								T-BONE
+								<p class="light-text small-text">
+									Soft tender steak marinated with herbs grilled to your liking served with chefs special sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">2500/=</td>
+						</tr>
+						<tr>
+							<td>
+								Lamb Chops
+								<p class="light-text small-text">
+									Herb grilled lamb chops done to perfection served with mint sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">2400/=</td>
+						</tr>
+						<tr>
+							<td>
+								Pork Chops
+								<p class="light-text small-text">
+									Lean cut of marinated pork chops served with honey mustard sauce, sauteed vegetables
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">2200/=</td>
+						</tr>
+						<tr>
+							<td>
+								Grilled Chicken Fillet
+								<p class="light-text small-text">
+									Boneless chicken breast soaked in garlic & herb marinade
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+						<tr>
+							<td>
+								Samaki wa Kupaka
+								<p class="light-text small-text">
+									Grilled fish coated with a rich & creamy tamarind flavoured coconut sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1300/=</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="brown-text">
+								Best Served with:
+								<p class="light-text small-text white-text">
+									Wedges / Fries / Rice / Mashed Potatoes
+								</p>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="curries-background">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 dark-background">
+					<h2 class="bold-serif-text brown-text">Curries</h2>
+					<table>
+						<tr>
+							<td>
+								Beef Curry
+								<p class="light-text small-text">
+									Tender Beef fillet cooked in creamy curry sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1400/=</td>
+						</tr>
+						<tr>
+							<td>
+								Chicken Curry
+								<p class="light-text small-text">
+									Boneless chicken cooked in spicy Indian curry sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1400/=</td>
+						</tr>
+						<tr>
+							<td>
+								Chicken Stir Fry
+								<p class="light-text small-text">
+									Chicken breast, soy sauce, baby carrots toasted in replay stir fry sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1400/=</td>
+						</tr>
+						<tr>
+							<td>
+								Fresh Water Tilapia Fillet
+								<p class="light-text small-text">
+									Grilled tilapia fillet slow cooked in Thai green coconut curry sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+						<tr>
+							<td colspan="2" class="brown-text">
+								Best Served with:
+								<p class="light-text small-text white-text">
+									Rice / Naan / Chapati / Mashed Potatoes
+								</p>
+							</td>
+						</tr>
+					</table>
+
+					<h2 class="bold-serif-text brown-text">Bittings</h2>
+					<table>
+						<tr>
+							<td>
+								Fish fingers
+								<p class="light-text small-text">
+									5pcs Served with Tartar Sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1500/=</td>
+						</tr>
+						<tr>
+							<td>
+								Chicken Wings
+								<p class="light-text small-text">
+									6pcs with Barbeque sauce / sticky tangy Sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1000/=</td>
+						</tr>
+						<tr>
+							<td>
+								Grilled Choma Sausages
+							</td>
+							<td class="brown-text bold-serif-text">600/=</td>
+						</tr>
+						<tr>
+							<td>
+								3 Pieces Chicken / Beef Samosa
+							</td>
+							<td class="brown-text bold-serif-text">700/=</td>
+						</tr>
+						<tr>
+							<td>
+								4 Pieces Beef Mshikaki
+							</td>
+							<td class="brown-text bold-serif-text">700/=</td>
+						</tr>
+						<tr>
+							<td>
+								Pulled Chicken Loaded With Fries
+							</td>
+							<td class="brown-text bold-serif-text">1100/=</td>
+						</tr>
+						<tr>
+							<td>
+								Feta And Coriander Samosa
+								<p class="light-text small-text">
+									Served with a sweet chilli sauce
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">600/=</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
 	
 </body>
 </html>
