drinks menu updated

--- a/index.html
+++ b/index.html
@@ -362,8 +362,620 @@
 		</div>
 	</section>
 
-	<section class="">
+	<section class="drinks-page-1">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 dark-background">
+					<h2 class="bold-serif-text brown-text">DRINKS MENU</h2>
+					<table>
+						<tr>
+							<td class="brown-text">
+								Imported Beers
+							</td>
+							<td class="brown-text">
+								Bottle
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Heineken 330ML
+							</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>
+								Desperado 300ML
+							</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>
+								Corona 300ML
+							</td>
+							<td>500</td>
+						</tr>
+					</table>
 
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">
+								Low Alcohol
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Heineken Zero
+							</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>
+								White Cap Crisp
+							</td>
+							<td>500</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">Local Beers</td>
+						</tr>
+						<tr>
+							<td>
+								Mura tatu
+							</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>
+								Niaje
+							</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>
+								Sand trap
+							</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>
+								Whitecap Lager 500ML
+							</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>
+								Tusker Lite
+							</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>
+								Tusker Malt 300ML
+							</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>
+								Guinness 300ML
+							</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>
+								Tusker Lager
+							</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>
+								Balozi 500ML
+							</td>
+							<td>350</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">Flavoured Drinks & Ciders</td>
+						</tr>
+						<tr>
+							<td>Savannah Cider</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>
+								Manyatta
+								<p class="light-text small-text">
+									Lime and ginger, Pinneaple and mint, Mango and ginger
+								</p>
+							</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>
+								Kenya Originals
+								<p class="light-text small-text">
+									Lime and ginger, Pinneaple and mint , Passion and Lime
+								</p>
+							</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>
+								Hunters Dry
+							</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Hunters Gold</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Gordons Dry & Tonic 330ML</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Gordons Pink & Tonic 330ML</td>
+							<td>350</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td class="brown-text">Rum</td>
+							<td class="brown-text">Bottle</td>
+							<td class="brown-text">Shot</td>
+						</tr>
+						<tr>
+							<td>Bacardi Carta Bianca</td>
+							<td>6,000</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Capt. Morgan Spiced Gold 750ML</td>
+							<td>5,500</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Bacardi Clear 750ML</td>
+							<td>5,000</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Bacardi Spiced 750ML</td>
+							<td>5,000</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Malibu</td>
+							<td>5,000</td>
+							<td>300</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Vodka</td>
+						</tr>
+						<tr>
+							<td>Grey Goose</td>
+							<td>10,000</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>Ciroc Clear 1L</td>
+							<td>8,000</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Ketel One Vodka 750ML</td>
+							<td>7,000</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Absolut Vodka 750ML</td>
+							<td>6,500</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Smirnoff 1L</td>
+							<td>5,500</td>
+							<td>300</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="drinks-page-2">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 dark-background">
+					<table>
+						<tr>
+							<td class="brown-text">Gin</td>
+							<td class="brown-text">Bottle</td>
+							<td class="brown-text">Shot</td>
+						</tr>
+						<tr>
+							<td>Hendricks 700ML</td>
+							<td>10,000</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>Tanqueray 10</td>
+							<td>10,000</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>Bombay Bramble 750ML</td>
+							<td>8,000</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Malfy Original 700ML</td>
+							<td>8,000</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Tanqueray Orig. 750ML</td>
+							<td>7,500</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Tanqueray Sevilla 750ML</td>
+							<td>7,500</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Beefeater Clear 750ML</td>
+							<td>6,000</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Beefeater Pink 750ML</td>
+							<td>6,000</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Gordons Clear 750ML</td>
+							<td>6,500</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Gordons Pink 750ML</td>
+							<td>6,500</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Bombay Sapphire 750ML</td>
+							<td>6,500</td>
+							<td>300</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Whisky, Bourbons</td>
+						</tr>
+						<tr>
+							<td>Gentleman Jack 750ML</td>
+							<td>10,000</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Jack Daniels Honey 700 ML</td>
+							<td>7,000</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Bulleit Bourbon 750ML</td>
+							<td>6,500</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Jack Daniel's 700ML</td>
+							<td>6,500</td>
+							<td>500</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Blended Whiskey</td>
+						</tr>
+						<tr>
+							<td>Dewars 15 Years</td>
+							<td>14,000</td>
+							<td>700</td>
+						</tr>
+						<tr>
+							<td>Jw Gold 750ML</td>
+							<td>14,000</td>
+							<td>700</td>
+						</tr>
+						<tr>
+							<td>Jw Green 750ML</td>
+							<td>11,000</td>
+							<td>600</td>
+						</tr>
+						<tr>
+							<td>Chivas Regal 12y 750ML</td>
+							<td>7,500</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Jameson Black Barrel 750ML</td>
+							<td>7,500</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Jw Black Label 750ML</td>
+							<td>7,000</td>
+							<td>400</td>
+						</tr>
+						<tr>
+							<td>Ballantines Finest 700ML</td>
+							<td>6,500</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Jameson 750ML</td>
+							<td>6,500</td>
+							<td>350</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Single Malts</td>
+						</tr>
+						<tr>
+							<td>Macallan 15 yr 750ML</td>
+							<td>24,000</td>
+							<td>-</td>
+						</tr>
+						<tr>
+							<td>Glenfiddich 18 yr 750ML</td>
+							<td>20,000</td>
+							<td>-</td>
+						</tr>
+						<tr>
+							<td>Glenfiddich 15 yr 700ML</td>
+							<td>16,000</td>
+							<td>750</td>
+						</tr>
+						<tr>
+							<td>Singleton 18 yr 700ML</td>
+							<td>16,000</td>
+							<td>750</td>
+						</tr>
+						<tr>
+							<td>Macallan 12 yr 700ML</td>
+							<td>14,000</td>
+							<td>650</td>
+						</tr>
+						<tr>
+							<td>Glenlivet 15 yr 750ML</td>
+							<td>14,000</td>
+							<td>650</td>
+						</tr>
+						<tr>
+							<td>Singleton 15 yr 700ML</td>
+							<td>14,000</td>
+							<td>650</td>
+						</tr>
+						<tr>
+							<td>Dalwhinnie 750ML</td>
+							<td>12,000</td>
+							<td>650</td>
+						</tr>
+						<tr>
+							<td>Glenlivet Founders Reserve</td>
+							<td>11,000</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>Glenlivet 12 yr 750ML</td>
+							<td>10,000</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>Glenfiddich 12 yr 750ML</td>
+							<td>10,000</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>Singleton 12 yr 700ML</td>
+							<td>10,000</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>Monkey Shoulder 750ML</td>
+							<td>8,000</td>
+							<td>400</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="drinks-page-3">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 dark-background">
+					<table>
+						<tr>
+							<td class="brown-text">Brandy & Cognac</td>
+							<td class="brown-text">Bottle</td>
+							<td class="brown-text">Shot</td>
+						</tr>
+						<tr>
+							<td>Remy Martini XO</td>
+							<td>42,000</td>
+							<td>-</td>
+						</tr>
+						<tr>
+							<td>Hennesy VSOP 700ML</td>
+							<td>16,000</td>
+							<td>800</td>
+						</tr>
+						<tr>
+							<td>Martel Blue swift 700ML</td>
+							<td>16,000</td>
+							<td>800</td>
+						</tr>
+						<tr>
+							<td>Martel VSOP 700ML</td>
+							<td>15,000</td>
+							<td>700</td>
+						</tr>
+						<tr>
+							<td>Hennesy VS 700ML</td>
+							<td>10,000</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>Martel VS</td>
+							<td>10,000</td>
+							<td>500</td>
+						</tr>
+						<tr>
+							<td>Courvoisier VS 700ML</td>
+							<td>8,000</td>
+							<td>400</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Soft Drinks</td>
+						</tr>
+						<tr>
+							<td>Soda (Coke, Fanta, Sprite)</td>
+							<td>200</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Soda Water</td>
+							<td>250</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Tonic Water</td>
+							<td>250</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>H2O</td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Aquamist Sparkling 500ML</td>
+							<td>250</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Mayers Still 1L</td>
+							<td>300</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Aquamist Sparkling 1L</td>
+							<td>350</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Mayers Sparkling 1L</td>
+							<td>350</td>
+							<td></td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Tequila</td>
+						</tr>
+						<tr>
+							<td>Patron Reposado</td>
+							<td>12,000</td>
+							<td>600</td>
+						</tr>
+						<tr>
+							<td>Don Julio Reposado</td>
+							<td>12,000</td>
+							<td>600</td>
+						</tr>
+						<tr>
+							<td>Don Julio Blanco</td>
+							<td>11,500</td>
+							<td>550</td>
+						</tr>
+						<tr>
+							<td>Patron Anejo</td>
+							<td>11,500</td>
+							<td>550</td>
+						</tr>
+						<tr>
+							<td>Jose Cuervo Silver 750ml</td>
+							<td>5,500</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Jose Cuervo Gold 750ml</td>
+							<td>6,000</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Patron Xo Cafe 750ml</td>
+							<td>7,000</td>
+							<td>400</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="3" class="brown-text">Liquers & Apperetifs</td>
+						</tr>
+						<tr>
+							<td>Sheridans</td>
+							<td>10,000</td>
+							<td>450</td>
+						</tr>
+						<tr>
+							<td>Grandmarnier 700ML</td>
+							<td>7,000</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Jaggermeister 750ML</td>
+							<td>7,000</td>
+							<td>350</td>
+						</tr>
+						<tr>
+							<td>Amarula 750ML</td>
+							<td>5,500</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Baileys Original 750ML</td>
+							<td>5,500</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td>Cointreau 750ML</td>
+							<td>5,500</td>
+							<td>300</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
 	</section>
 	
 </body>
