landing and logo up to date

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-xs-12 blue-background">
+					<img src="images/logo.png" width="100%" class="img-responsive">
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- PAGE 1 -->
 	<section class="breakfast-background">
 		<div class="container">
@@ -971,6 +980,144 @@
 							<td>Cointreau 750ML</td>
 							<td>5,500</td>
 							<td>300</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="cocktails-background">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 golden-border">
+					<h2 class="bold-serif-text brown-text">COCKTAILS</h2>
+					<table>
+						<tr>
+							<td class="black-text">
+								Tom Collins
+								<p class="light-text small-text black-text">
+									(Gin, syrup, lime, soda water, grenadine, lime wheel)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">700/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Martini
+								<p class="light-text small-text black-text">
+									(Gin, martini, olive brine, olives)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">700/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Gintuation
+								<p class="light-text small-text black-text">
+									(Gin, cardamom seeds, syrup, lime, pineapple juice, pineapple wedge)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">750/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Day Downer
+								<p class="light-text small-text black-text">
+									(Pink gin, lime, syrup, crèmede cassis, orange slice)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">800/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Negroni
+								<p class="light-text small-text black-text">
+									(Gin, Campari, martini, orange slice)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">800/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Replay Mojito
+								<p class="light-text small-text black-text">
+									(Clear rum, lime, syrup, mint,fruit juice passion, orange, strawberries, grapes soda water)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">800/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Cuba Libre
+								<p class="light-text small-text black-text">
+									(Spiced rum, coke, lime wedges)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">850/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Upside Down
+								<p class="light-text small-text black-text">
+									(Malibu, southern comfort, pineapple juice, grenadine, sprite, pineapple wedge)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">900/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Spiced Mojito
+								<p class="light-text small-text black-text">
+									(Spiced rum, mint, syrup, lime,ginger soda, lime wheel)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">900/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Pinacolada
+								<p class="light-text small-text black-text">
+									(Clear rum, Malibu, coconut cream, pineapple juice, pineapple wedge)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">900/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Pirate Head
+								<p class="light-text small-text black-text">
+									(Spiced rum, cinnamon syrup, lime, mint, pineapple juice, blue curacao, pineapple wedge)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">950/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Whiskey Sour
+								<p class="light-text small-text black-text">
+									(Scotch whiskey, syrup, lime, angostura bitters, orange slice)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1000/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Replay Fashioned
+								<p class="light-text small-text black-text">
+									(Bourbon whiskey, syrup, lime,orange slice flamed orange zest)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1000/=</td>
+						</tr>
+						<tr>
+							<td class="black-text">
+								Long Island
+								<p class="light-text small-text black-text">
+									(Gin, Vodka, Rum, Tequila Tripple sec, Lime, Syrup, coke)
+								</p>
+							</td>
+							<td class="brown-text bold-serif-text">1200/=</td>
 						</tr>
 					</table>
 				</div>
