--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<section>
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-12 col-xs-12 blue-background">
 					<img src="images/logo.png" width="100%" class="img-responsive">
