few adjustments on the uI

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 	<section class="drinks-page-1">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 col-xs-8 dark-background">
+				<div class="col-sm-6 col-xs-8 navy-blue-background">
 					<h2 class="bold-serif-text brown-text">DRINKS MENU</h2>
 					<table>
 						<tr>
@@ -602,7 +602,7 @@
 	<section class="drinks-page-2">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 col-xs-8 dark-background">
+				<div class="col-sm-6 col-xs-8 navy-blue-background">
 					<table>
 						<tr>
 							<td class="brown-text">Gin</td>
@@ -816,7 +816,7 @@
 	<section class="drinks-page-3">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 col-xs-8 dark-background">
+				<div class="col-sm-6 col-xs-8 navy-blue-background">
 					<table>
 						<tr>
 							<td class="brown-text">Brandy & Cognac</td>
