updated the menu

--- a/index.html
+++ b/index.html
@@ -371,6 +371,16 @@
 		</div>
 	</section>
 
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-xs-12 blue-background">
+					<img src="images/drinks.png" width="100%" class="img-responsive">
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="drinks-page-1">
 		<div class="container">
 			<div class="row">
