replay menu done

--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,226 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="wine-page-1">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 navy-blue-background">
+					<h2 class="bold-serif-text brown-text">WINE MENU</h2>
+					<table>
+						<tr>
+							<td class="brown-text">Red Wine 750ml</td>
+							<td class="brown-text">Bottle</td>
+						</tr>
+						<tr>
+							<td>De Grendel Rubaiyat</td>
+							<td>13,500</td>
+						</tr>
+						<tr>
+							<td>Vergelegen Cab Sav Blanc</td>
+							<td>6,000</td>
+						</tr>
+						<tr>
+							<td>Rutini Encuentro Malbec</td>
+							<td>6,000</td>
+						</tr>
+						<tr>
+							<td>Mucho Mas Tinto</td>
+							<td>5,000</td>
+						</tr>
+						<tr>
+							<td>Jacob's Creek Double Barell</td>
+							<td>4,000</td>
+						</tr>
+						<tr>
+							<td>Jacob's Creek Reserve Shiraz</td>
+							<td>3,500</td>
+						</tr>
+						<tr>
+							<td>Nederburg Merlot</td>
+							<td>3,500</td>
+						</tr>
+						<tr>
+							<td>Nederburg Cab Sav</td>
+							<td>3,000</td>
+						</tr>
+						<tr>
+							<td>Jacob's Creek Shiraz</td>
+							<td>3,500</td>
+						</tr>
+						<tr>
+							<td>Jacob's Creek Merlot</td>
+							<td>3,500</td>
+						</tr>
+						<tr>
+							<td>Fonttera Cab Sav</td>
+							<td>3,500</td>
+						</tr>
+						<tr>
+							<td>Rosso Nobile Al Cioccolata (Sweet)</td>
+							<td>4,000</td>
+						</tr>
+						<tr>
+							<td>Birds And Bees (Sweet)</td>
+							<td>4,000</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">White 750ML</td>
+						</tr>
+						<tr>
+							<td>Kim Crawford Pinot Gris</td>
+							<td>6,500</td>
+						</tr>
+						<tr>
+							<td>Motu Nui Sav Blanc</td>
+							<td>4,000</td>
+						</tr>
+						<tr>
+							<td>Clear Water Cove Sauv Blanc</td>
+							<td>4,000</td>
+						</tr>
+						<tr>
+							<td>Jacob Creek Classic Chardonnay</td>
+							<td>4,000</td>
+						</tr>
+						<tr>
+							<td>Birds And Bees White</td>
+							<td>3,500</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">House Wine By Glass</td>
+						</tr>
+						<tr>
+							<td>Nederburg Merlot</td>
+							<td>600</td>
+						</tr>
+						<tr>
+							<td>Birds And Bees Red</td>
+							<td>700</td>
+						</tr>
+						<tr>
+							<td>Birds And Bees White</td>
+							<td>700</td>
+						</tr>
+						<tr>
+							<td>Jacob Creek Classic Chardonnay</td>
+							<td>800</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="wine-page-2">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-xs-8 navy-blue-background">
+					<h2 class="bold-serif-text brown-text">WINE MENU</h2>
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">Rose</td>
+						</tr>
+						<tr>
+							<td>JC Rose 750ML</td>
+							<td>3,500</td>
+						</tr>
+						<tr>
+							<td>Kumusha Cinsault 750ML</td>
+							<td>4,500</td>
+						</tr>
+						<tr>
+							<td>Protea Dry Rose 750ML</td>
+							<td>4,500</td>
+						</tr>
+						<tr>
+							<td>Simonsig Rose 750ML</td>
+							<td>4,500</td>
+						</tr>
+						<tr>
+							<td>La Vieille Ferme Rose 750ML</td>
+							<td>4,500</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td class="brown-text">Prosecco & Sparkling Wine</td>
+							<td>Bottle</td>
+						</tr>
+						<tr>
+							<td>Bottega Gold Prosecco 750ML</td>
+							<td>12,000</td>
+						</tr>
+						<tr>
+							<td>Bottegga Rose Gold Brut 750ML</td>
+							<td>12,000</td>
+						</tr>
+						<tr>
+							<td>Bottegga White Gold Brut 750ML</td>
+							<td>12,000</td>
+						</tr>
+						<tr>
+							<td>Bottega Prosecco Rose 750ML</td>
+							<td>6,500</td>
+						</tr>
+						<tr>
+							<td>Martini Prosecco 750ML</td>
+							<td>5,000</td>
+						</tr>
+						<tr>
+							<td>Fantinel Prosecco Extra Dry</td>
+							<td>5,000</td>
+						</tr>
+						<tr>
+							<td>Veuve Ambal Sparkling Rose 750ML</td>
+							<td>4,000</td>
+						</tr>
+						<tr>
+							<td>Veuve Ambal Brut 750ML</td>
+							<td>4,000</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td colspan="2" class="brown-text">Champagne</td>
+						</tr>
+						<tr>
+							<td>Veuve Cliquot Brut 750ML</td>
+							<td>25,000</td>
+						</tr>
+						<tr>
+							<td>Moet & Chandon Brut 750ML</td>
+							<td>20,000</td>
+						</tr>
+						<tr>
+							<td>Moet & Chandon Ice Imperial 750ML</td>
+							<td>20,000</td>
+						</tr>
+						<tr>
+							<td>Belaire Rose</td>
+							<td>10,000</td>
+						</tr>
+						<tr>
+							<td>Belaire Gold</td>
+							<td>10,000</td>
+						</tr>
+						<tr>
+							<td>Belaire Luxe</td>
+							<td>10,000</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
 	
 </body>
 </html>
